# kiln

./: .clang-format  .gitignore  8quees.cmake  AGENTS.md  CLADUE.md  CLAUDE.md  CMakeLists.txt  DrogonConfig.cmake.in  EXTERNAL_COMMAND_CACHE.md  LICENSE.txt  OurFindPythonInterp.cmake  README.md  format.sh  modules-plan.md  patch.patch  reproduce_crash.cmake  test.cmake  test_genex.cmake  test_genex_comment.cmake  test_included.cmake  test_main.cpp  test_parens.cmake  test_repro.cmake  test_sha256.cmake  test_unquoted.cmake  vcpkg.json
.qt/: QtDeploySupport.cmake
Internal/: CheckSourceCompiles.cmake
benchmark/: knights-tour.cmake  lavnistine.cmake  smith_waterman.cmake
build_test_custom/: .dmake_cache  test_project
cmake/: GenerateVersion.cmake  version.cpp.in
dmake/: CMakeArray.cpp  CMakeArray.hpp  CMakeList.cpp  CMakeList.hpp  artifact.cpp  artifact.hpp  ast_cache.cpp  ast_cache.hpp  autogen.cpp  autogen.hpp  build_system.cpp  build_system.hpp  cache_store.cpp  cache_store.hpp  clock_cache.hpp  cmake-language.cpp  cmake-language.hpp  cmake_path_utils.cpp  cmake_path_utils.hpp  command_parser.cpp  command_parser.hpp  compile_features.cpp  compile_features.hpp  compiler.hpp  condition_evaluator.cpp  condition_evaluator.hpp  condition_tree.cpp  container_utils.hpp  debugger.cpp  debugger.hpp  genex_evaluator.cpp  genex_evaluator.hpp  genex_parser.cpp  genex_parser.hpp  gnu_compiler.hpp  install_executor.cpp  install_executor.hpp  interperter.cpp  interperter.hpp  language.cpp  (+22 more)
dmake-cli/: main.cpp
docs/: PROPERTY_SYSTEM.md  README.md  arch_refactor.md  argument_expansion.md  cli_ux_design.md  command_parser.md  debugging-cmake-programs.md  find_package_design.md  intercepted-cmake-commands.md  kiln-for-cmake-veterans.md  kilns-caching-machinism.md  module_support_design.md  multi-config-implementation.md  multi_language_design.md  nested_variable_expansion.md  scoping_implementation.md  testing_and_selective_building.md  using-kiln.md
githooks/: pre-commit
kiln/: CMakeArray.cpp  CMakeArray.hpp  (+63 more)
kiln-cli/: main.cpp
test_project/: CMakeLists.txt  CMakeLists_functions_test.txt  main.cpp  my_lib.cpp  test_functions.cmake
test_project/subdir/: CMakeLists.txt
tests/integration/add_dependencies/: CMakeLists.txt  main.cpp  test.sh
tests/integration/alias/: CMakeLists.txt  main.cpp  mylib.cpp  test.sh  utils.cpp
tests/integration/aux_source_directory/: CMakeLists.txt  main.cpp  test.sh
tests/integration/aux_source_directory/src/: README.txt  file3.c  header.h
tests/integration/compiler-launcher/: CMakeLists.txt  launcher_shim.sh  launcher_shim_target.sh  main.cpp  test.sh
tests/integration/configure_file/: CMakeLists.txt  config.h.in  script.sh.in  test.sh
tests/integration/configure_file_cmakedefine/: CMakeLists.txt  config.h.in  main.cpp  test.sh
tests/integration/custom_command/: CMakeLists.txt  generate_config.cmake  generate_source.cmake  input.txt  main.cpp  test.sh
tests/integration/directory-properties/: CMakeLists.txt  output.txt  test.sh
tests/integration/directory-properties/subdir/: CMakeLists.txt
tests/integration/directory_properties/: CMakeLists.txt  after.cpp  before.cpp  linked.cpp  test.sh
tests/integration/directory_properties/libdir/: CMakeLists.txt  mylib.cpp
tests/integration/directory_properties/sub/: CMakeLists.txt  child.cpp
tests/integration/export-basic/: CMakeLists.txt  main.cpp  mylib.cpp  test.sh
tests/integration/export-basic/include/: mylib.h
tests/integration/external_project_buildtime/: CMakeLists.txt  main.cpp  test.sh
tests/integration/external_project_buildtime/mylib_src/: CMakeLists.txt  lib.txt  mylib.cpp
tests/integration/find-commands/: CMakeLists.txt  main.cpp  test.sh
tests/integration/find-package-exact/: CMakeLists.txt  test.sh
tests/integration/find-package-exact/cmake/: FindMockExact.cmake
tests/integration/find-package-exact/cmake_pkg/: MockExactConfig.cmake  MockExactConfigVersion.cmake
tests/integration/find-package-hints/: CMakeLists.txt  test.sh
tests/integration/find-package-hints/cmake_pkg/: MockHintsConfig.cmake
tests/integration/find-package-module/: CMakeLists.txt  test.sh
tests/integration/find-package-module/cmake/: FindMockModule.cmake
tests/integration/find-package-root/: CMakeLists.txt  test.sh
tests/integration/find-package-root/cmake_modules/: FindMockModule.cmake
tests/integration/find-package-root/cmake_pkg/lib/cmake/MockRoot/: MockRootConfig.cmake
tests/integration/find-package-version/: CMakeLists.txt  test.sh
tests/integration/find-package-version/mock_packages/MockPkg/: MockPkgConfig.cmake  MockPkgConfigVersion.cmake
tests/integration/find_package_components/: CMakeLists.txt  test.sh
tests/integration/find_package_components/cmake/: FindTestPkg.cmake  FindTestPkg2.cmake  FindTestPkg3.cmake
tests/integration/find_package_components_missing/: CMakeLists.txt  test.sh
tests/integration/find_package_components_missing/cmake/: FindPartialPkg.cmake
tests/integration/genex_basic/: CMakeLists.txt  main.cpp  test.sh
tests/integration/genex_basic/include/: config.h
tests/integration/genex_recovery/: CMakeLists.txt  test.sh
tests/integration/install_files/: CMakeLists.txt  test.sh
tests/integration/interface-properties/: CMakeLists.txt  main.cpp  test.sh
tests/integration/interface-properties/include/: mylib.hpp
tests/integration/interface_property_genex/: CMakeLists.txt  consumer.cpp  provider.cpp  pub_consumer.cpp  test.sh
tests/integration/interface_property_genex/include_a/: from_a.h
tests/integration/interface_property_genex/include_b/: from_b.h
tests/integration/link_only/: CMakeLists.txt  link_only_main.cpp  normal_main.cpp  test.sh
tests/integration/modules_basic/: CMakeLists.txt  main.cpp  math.cppm  test.sh
tests/integration/modules_cross_target/: CMakeLists.txt  test.sh
tests/integration/modules_cross_target/app/: main.cpp
tests/integration/modules_cross_target/liba/: foo.cppm  foo_impl.cpp
tests/integration/pch-language-guard/: CMakeLists.txt  hello.cpp  main.cpp  removed_api.cpp  removed_api.h  test.sh
(+271 files in other folders)
